--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "test"
+    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "build": "./node_modules/webpack/bin/webpack.js",
+    "test": "./node_modules/mocha/bin/mocha --compilers @babel/register"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,24 @@
   "bugs": {
     "url": "https://github.com/TCraig7/Play/issues"
   },
-  "homepage": "https://github.com/TCraig7/Play#readme"
+  "homepage": "https://github.com/TCraig7/Play#readme",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
+  },
+  "dependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "css-loader": "^1.0.1",
+    "jquery": "^3.3.1",
+    "mocha-loader": "^2.0.0",
+    "node-libs-browser": "^2.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
+  }
 }
